samples/_failures_safe/1761557722_1318a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8927f2a2.c: In function ‘main’:
./samples/SAFE/__tmp_8927f2a2.c:137:12: error: missing terminating " character
  137 |     printf("Enter log entries (format: YYYY-MM-DD HH:MM:SS LEVEL message
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8927f2a2.c:137:5: error: expected expression at end of input
  137 |     printf("Enter log entries (format: YYYY-MM-DD HH:MM:SS LEVEL message
      |     ^~~~~~
./samples/SAFE/__tmp_8927f2a2.c:137:5: error: expected declaration or statement at end of input
